--- a/index.html
+++ b/index.html
@@ -41,6 +41,55 @@
             background-size: 200% 200%;
             animation: gradientAnimation 15s ease infinite;
         }
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            cursor: pointer;
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .modal-content {
+            position: relative;
+            max-width: 90%;
+            max-height: 90%;
+        }
+        .modal-content img {
+            width: 100%;
+            height: auto;
+            object-fit: contain;
+        }
+        .modal-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: #fff;
+            color: #000;
+            border: none;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+        .modal-close:focus {
+            outline: none;
+        }
+        .modal-content {
+            pointer-events: none; /* Prevents downloading */
+        }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -72,7 +121,7 @@
     <header id="home" class="animated-gradient text-white py-20 relative">
         <div id="particles-js" class="absolute top-0 left-0 w-full h-full"></div>
         <div class="container mx-auto text-center relative z-10">
-            <img src="IMG.jpg" alt="Raghul M" class="rounded-full mx-auto mb-8 border-4 border-white shadow-lg">
+            <img src="IMG.jpg" alt="Raghul M" class="profile-img rounded-full mx-auto mb-8 border-4 border-white shadow-lg" id="profile-img">
             <h1 class="text-5xl font-bold mb-4 animate-typing"></h1>
             <p class="text-xl mb-8">Computer Science Engineer | Python Developer | Web Enthusiast</p>
             <div class="flex justify-center space-x-4">
@@ -114,78 +163,148 @@
                         <p>Learn about my academic background and qualifications.</p>
                     </a>
                     <a href="certificates.html" class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition duration-300 card-hover">
-                        <h2 class="text-2xl font-semibold mb-4"><i class="fas fa-certificate mr-2 text-purple-600"></i>Certificates</h2>
-                        <p>Check out my professional certifications and achievements.</p>
+                        <h2 class="text-2xl font-semibold mb-4"><i class="fas fa-certificate mr-2 text-red-600"></i>Certificates</h2>
+                        <p>Check out my certifications and credentials.</p>
                     </a>
                 </div>
             </section>
         </div>
     </main>
 
-    <footer class="gradient-bg text-white py-8">
+    <footer class="gradient-bg text-white py-6">
         <div class="container mx-auto text-center">
-            <div class="flex justify-center space-x-4 mb-4">
-                <a href="https://x.com/19csr080" class="text-2xl hover:text-gray-300"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.facebook.com/raghul.astro.7/" class="text-2xl hover:text-gray-300"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/raghul.m2/" class="text-2xl hover:text-gray-300"><i class="fab fa-instagram"></i></a>
-            </div>
             <p>&copy; 2024 Raghul M. All rights reserved.</p>
         </div>
     </footer>
 
-    <button id="scroll-to-top" class="bg-blue-600 text-white p-3 rounded-full">
-        <i class="fas fa-arrow-up"></i>
+    <button id="scroll-to-top" class="bg-blue-600 text-white p-2 rounded-full shadow-lg hover:bg-blue-700 transition duration-300">
+        <i class="fas fa-chevron-up"></i>
     </button>
 
+    <!-- Modal Structure -->
+    <div id="profile-modal" class="modal">
+        <div class="modal-content relative">
+            <button class="modal-close" id="modal-close">
+                <i class="fas fa-times"></i>
+            </button>
+            <img src="IMG.jpg" alt="Raghul M">
+        </div>
+    </div>
+
     <script>
-        // Mobile menu toggle
-        document.getElementById('mobile-menu-button').addEventListener('click', function() {
-            document.getElementById('mobile-menu').classList.toggle('hidden');
+        particlesJS('particles-js', {
+            "particles": {
+                "number": {
+                    "value": 80,
+                    "density": {
+                        "enable": true,
+                        "value_area": 800
+                    }
+                },
+                "color": {
+                    "value": "#ffffff"
+                },
+                "shape": {
+                    "type": "circle",
+                    "stroke": {
+                        "width": 0,
+                        "color": "#000000"
+                    },
+                    "polygon": {
+                        "nb_sides": 5
+                    }
+                },
+                "opacity": {
+                    "value": 0.5,
+                    "random": false,
+                    "anim": {
+                        "enable": false,
+                        "speed": 1,
+                        "opacity_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "size": {
+                    "value": 3,
+                    "random": true,
+                    "anim": {
+                        "enable": false,
+                        "speed": 40,
+                        "size_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "line_linked": {
+                    "enable": true,
+                    "distance": 150,
+                    "color": "#ffffff",
+                    "opacity": 0.4,
+                    "width": 1
+                },
+                "move": {
+                    "enable": true,
+                    "speed": 6,
+                    "direction": "none",
+                    "random": false,
+                    "straight": false,
+                    "out_mode": "out",
+                    "bounce": false,
+                    "attract": {
+                        "enable": false,
+                        "rotateX": 600,
+                        "rotateY": 1200
+                    }
+                }
+            },
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": {
+                    "onhover": {
+                        "enable": true,
+                        "mode": "repulse"
+                    },
+                    "onclick": {
+                        "enable": true,
+                        "mode": "push"
+                    },
+                    "resize": true
+                }
+            },
+            "retina_detect": true
         });
 
-        // Scroll to top functionality
-        window.onscroll = function() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("scroll-to-top").style.display = "block";
+        document.getElementById('scroll-to-top').addEventListener('click', function() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
+
+        window.addEventListener('scroll', function() {
+            const scrollToTopButton = document.getElementById('scroll-to-top');
+            if (window.scrollY > 200) {
+                scrollToTopButton.style.display = 'block';
             } else {
-                document.getElementById("scroll-to-top").style.display = "none";
+                scrollToTopButton.style.display = 'none';
             }
-        };
-
-        document.getElementById("scroll-to-top").addEventListener("click", function() {
-            window.scrollTo({top: 0, behavior: 'smooth'});
         });
 
-        // Particles.js configuration
-        particlesJS("particles-js", {
-            particles: {
-                number: { value: 80, density: { enable: true, value_area: 800 } },
-                color: { value: "#ffffff" },
-                shape: { type: "circle", stroke: { width: 0, color: "#000000" }, polygon: { nb_sides: 5 } },
-                opacity: { value: 0.5, random: false, anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false } },
-                size: { value: 3, random: true, anim: { enable: false, speed: 40, size_min: 0.1, sync: false } },
-                line_linked: { enable: true, distance: 150, color: "#ffffff", opacity: 0.4, width: 1 },
-                move: { enable: true, speed: 6, direction: "none", random: false, straight: false, out_mode: "out", bounce: false, attract: { enable: false, rotateX: 600, rotateY: 1200 } }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: { onhover: { enable: true, mode: "repulse" }, onclick: { enable: true, mode: "push" }, resize: true },
-                modes: { grab: { distance: 400, line_linked: { opacity: 1 } }, bubble: { distance: 400, size: 40, duration: 2, opacity: 8, speed: 3 }, repulse: { distance: 200, duration: 0.4 }, push: { particles_nb: 4 }, remove: { particles_nb: 2 } }
-            },
-            retina_detect: true
+        document.getElementById('mobile-menu-button').addEventListener('click', function() {
+            const mobileMenu = document.getElementById('mobile-menu');
+            mobileMenu.classList.toggle('hidden');
         });
 
-        // Typing animation
-        const text = "Raghul M";
-        let i = 0;
-        function typeWriter() {
-            if (i < text.length) {
-                document.querySelector("h1").innerHTML += text.charAt(i);
-                i++;
-                setTimeout(typeWriter, 150);
+        document.getElementById('profile-img').addEventListener('click', function() {
+            document.getElementById('profile-modal').style.display = 'flex';
+        });
+
+        document.getElementById('modal-close').addEventListener('click', function() {
+            document.getElementById('profile-modal').style.display = 'none';
+        });
+
+        // Close the modal if the user clicks outside the image
+        document.getElementById('profile-modal').addEventListener('click', function(event) {
+            if (event.target === this) {
+                this.style.display = 'none';
             }
-        }
-        window.onload = typeWriter;
+        });
     </script>
 </body>
 </html>
